# H-Neurons-Auto

./: README.md  pyproject.toml  safe_oai_responses.py
data/modernbert-path-examples/: Mistral7b_train_qids.json  Mistral7b_train_samples_answer_tokens.jsonl
data/modernbert-path-examples/Gemma3-4b/: .gitignore
data/modernbert-path-examples/Gemma3-4b/train/: Gemma3_4b_train_answer_tokens.jsonl  Gemma3_4b_train_qids.json
data/modernbert-path-examples/Gemma3-4b/val/: Gemma3_4b_eval_answer_tokens.jsonl  Gemma3_4b_eval_qids.json
scripts/: .gitignore  classifier.py  collect_responses.py  extract_answer_tokens.py
scripts/acceleration/: cuda_grid_search.py
scripts/auto/: .gitignore  modernbert_nli.py  modernbert_qna.py
testing/: faitheval_unanswerable_bench.py  google_simpleqa_bench.py  streamlit_ui.py
