[project]
name = "h-neurons-auto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.4",
    "joblib>=1.5.3",
    "openai>=2.30.0",
    "scikit-learn>=1.8.0",
    "transformers>=4.57.6",
    "vllm>=0.19.0",
]
